Fix Footer aligned with content

--- a/frontend/packages/volto-light-theme/src/theme/_footer.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_footer.scss
@@ -14,7 +14,7 @@
   }
 
   .container {
-    padding: 0 1rem;
+    padding: 0;
   }
 
   & > :first-child:not(:empty) {
